Updated styling for Corel

--- a/components/jade/content.jade
+++ b/components/jade/content.jade
@@ -2,12 +2,12 @@ div.container-report.clearfix
   div#options.container-section
     div.container-options-start-event
       //- div#start-event-select.mp-select.mp-event-select
-      div#start-event-property-value-select.mp-select.mp-property-value-select
+      div#start-event-property-value-select.mp-select.mp-property-value-select.wide
       //- Remove
       button.excluded-values-button
     div.container-options-global-filter.inactive
       //- very ugly
-      div.container-controls-global-filter 
+      div.container-controls-global-filter
         div.mp-select.mp-super-property-select
       div.global-filter-help
         div.global-filter-help-tooltip Each event must include the selected property/value pair to count as a conversion
